Fix spacing styling issues

--- a/src/styles/Select.module.css
+++ b/src/styles/Select.module.css
@@ -1,5 +1,5 @@
 .root {
-  max-width: calc(11.25rem * var(--mantine-scale));
+  max-width: calc(10.25rem * var(--mantine-scale));
 }
 
 .input {
